# msix-global-installer

./: .gitignore  LICENSE.txt  README.md  build_exe.ps1  extract_msix_data.py  hello.py  pyproject.toml
.github/workflows/: python-app.yml
src/: app.py  config.py  events.py  gui.py  msix.py
src/msix_global_installer/: app.py  config.py  events.py  gui.py  image.py  msix.py  pickler.py  pyinstaller_helper.py
tests/: test_msix.py
