[project]
name = "msix-global-installer"
version = "0.1.0"
description = "Install MSIX packages globally on Windows."
readme = "README.md"
requires-python = ">=3.10.6"
dependencies = [
    "attrs>=24.3.0",
    "pyuac>=0.0.3",
    "pywin32>=308",
    "sv-ttk>=2.6.0",
    "tk>=0.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.8.5",
]
